fix: Fix UI issue on mobile, now all container has a Auto width

--- a/src/styles/global/_boilerplate.scss
+++ b/src/styles/global/_boilerplate.scss
@@ -21,12 +21,12 @@ body {
 }
 
 .container {
-  max-width: 200rem !important;
+  max-width: auto !important;
   margin: 0 auto !important;
-  padding: 0 12.5rem !important;
+  padding: 0 6.5rem !important;
 
   @media (max-width:1000px) {
-    padding: 0 2.5rem !important;
+    padding: 0 1.5rem !important;
   }
 }
 
